--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Im Collin gallagher and this is the root of my website
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>My Homepage!</title>
+	</head>
+	<body>
+		<h1>Welcome to my homepage!</h1>
+		<p>Take a look at all my cool links!</p>
+		<p>Especially look at my awesome <a href="itis3135/">ITIS 3135 Site!</a></p>
+	</body>
+</html>
