--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,6 +4,14 @@
 		<title>Collin Gallagher's Carefree Goose | ITIS3135 | Home</title>
 	</head>
 	<body>
-		<p>Collin Gallagher's Carefree Goose | ITIS3135 | Home/p>
+		<header>
+			<h1>Collin Gallagher's Carefree Goose | ITIS3135 | Home</h1>
+		</header>
+		<main>
+
+		</main>
+		<footer>
+
+		</footer>
 	</body>
 </html>
