--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 	<head>
 		<title>Collin Gallagher's Carefree Goose | ITIS3135 | Home</title>
 		<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
