--- a/index.html
+++ b/index.html
@@ -10,4 +10,20 @@
 		<p>Take a look at all my cool links!</p>
 		<p>Especially look at my awesome <a href="itis3135/">ITIS 3135 Site!</a></p>
 	</body>
+	<footer>
+		<a href="https://cjgalla.github.io/">Github.io</a> |
+    	<a href="https://webpages.charlotte.edu/cjgalla17">CLT Web</a> |
+    	<a href="https://cjgalla.github.io/itis3135/">ITIS3135</a> |
+    	<a href="https://www.linkedin.com/in/cgalla17/">LinkedIn</a>
+	</footer>
+
+	<style>
+		footer {
+			text-align: center;
+			position: fixed;
+			bottom: 0;
+			width: 100%;
+			background-color: #f8f9fa;
+		}
+	</style>
 </html>
