--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
 			width: 100%;
 			background-color: #f8f9fa;
 		}
+
+		.footer-links {
+			font-size: 16px;
+			color: #6c757d;
+		}
 	</style>
 </html>
