adding whimisical character

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -9,7 +9,9 @@
 			<h1>Collin Gallagher's Carefree Goose | ITIS3135 | Home</h1>
 		</header>
 		<main>
-
+			<h2>Welcome</h2>
+			<p>Take a look at my cool links!<a href="carefreegoose/"></p>
+			
 		</main>
 		<footer>
 
