--- a/itis3135/carefreegoose/link3.html
+++ b/itis3135/carefreegoose/link3.html
@@ -12,9 +12,9 @@
         <p>Take a look at all our products</p>
     </main>
     <footer>
-        <a href="index.html">link1</a>
-        <a href="link2.html">link2</a>
-        <a href="link3.html">link3</a>
+        <a href="">link1</a>
+        <a href="">link2</a>
+        <a href="">link3</a>
     </footer>
 </body>
 </html>
