--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -10,8 +10,7 @@
 		</header>
 		<main>
 			<h2>Welcome</h2>
-			<p>Take a look at my cool links!<a href="carefreegoose/"></p>
-			
+			<p>Take a look at my cool links!<a href="carefreegoose/">whimisical character</a></p>	
 		</main>
 		<footer>
 
