--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>My Homepage!</title>
+		<title>Collin's Homepage!</title>
 		<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<h1>Welcome to my homepage!</h1>
+		<h1>Welcome to Collins homepage!</h1>
 		<p>Take a look at all my cool links!</p>
-		<p>Especially look at my awesome <a href="itis3135/">ITIS 3135 Site!</a></p>
 	</body>
+	<footer>
+		<nav>
+			<a href="https://wepages.uncc.edu/cgalla17">Charlotte.edu</a>
+			-
+			<a href="https://github.com/cjgalla">GitHub</a>
+			-
+			<a href="https://cjgalla.github.io/">GitHub.io</a>
+			-
+			<a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
+			-
+			<a href="itis3135/">ITIS-3135</a>
+		</nav>
+	</footer>
 </html>
