--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Collin's Homepage!</title>
+		<title>Collin's Homepage</title>
 		<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Welcome to Collins homepage!</h1>
+		<h1>Welcome to Collin Gallagher's homepage!</h1>
+		<h2>Home Page</h2>
 		<p>Take a look at all my cool links!</p>
 	</body>
 	<footer>
