--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Collin's Homepage</title>
 		<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="styles/style.css">
+		<link rel="stylesheet" href="itis3135/styles/style.css">
 	</head>
 	<body>
 		<h1>Welcome to Collin Gallagher's homepage!</h1>
