--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		<link rel="stylesheet" href="itis3135/styles/style.css">
 	</head>
 	<body>
-		<h1>Welcome to Collin Gallagher's homepage!</h1>
+		<h1>Collin Gallagher's Carefree Goose | ITIS3135 | Home</h1>
 		<h2>Home Page</h2>
 		<p>Take a look at all my cool links!</p>
 	</body>
 	<footer>
 		<nav>
-			<a href="https://wepages.uncc.edu/cgalla17">Charlotte.edu</a>
+			<a href="https://webpages.charlotte.edu/cgalla17/">Charlotte.edu</a>
 			-
 			<a href="https://github.com/cjgalla">GitHub</a>
 			-
