--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="itis3135/styles/style.css">
 	</head>
 	<body>
-		<h1>Collin Gallagher's Carefree Goose | ITIS3135 | Home</h1>
+		<h1>Collin Gallagher's Carefree Goose | Home | ITIS3135</h1>
 		<h2>Home Page</h2>
 		<p>Take a look at all my cool links!</p>
 	</body>
