--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,17 +3,36 @@
 	<head>
 		<title>Collin Gallagher's Carefree Goose | ITIS3135 | Home</title>
 		<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="styles/default.css">
 	</head>
 	<body>
 		<header>
-			<h1>Collin Gallagher's Carefree Goose | ITIS3135 | Home</h1>
+			<h1>Collin Gallagher's Carefree Goose | Home | ITIS3135</h1>
+			<nav>
+				<a href="./">Home</a>
+				-
+				<a href="introduction.html">Introduction</a>
+				-
+				<a href="contract.html">Contract</a>"
+			</nav>
 		</header>
 		<main>
-			<h2>Welcome</h2>
-			<p>Take a look at my cool links!<a href="carefreegoose/">whimisical character</a></p>	
+			<h2>Welcome to my ITIS3135 Homepage</h2>
+			<p>You've made it to the start of my work!</p>	
 		</main>
 		<footer>
-
+			<nav>
+				<a href="https://webpages.charlotte.edu/cgalla17/">Charlotte.edu</a>
+				-
+				<a href="https://github.com/cjgalla">GitHub</a>
+				-
+				<a href="https://cjgalla.github.io/">GitHub.io</a>
+				-
+				<a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
+				-
+				<a href="itis3135/">ITIS-3135</a>
+			</nav>
+			<p>Page built by <a href="">Care Free Goose Snacks</a>&copy; 2025</p>
 		</footer>
 	</body>
 </html>
