--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang = "en">
 	<head>
-		<title>Collin Gallagher's Carefree Goose | ITIS3135 | Home</title>
+		<title>Collin Gallagher's Carefree Goose | ITIS3135 | Contract</title>
 		<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="styles/default.css">
 	</head>
 	<body>
 		<header>
-			<h1>Collin Gallagher's Carefree Goose | ITIS3135</h1>
+			<h1>Collin Gallagher's Carefree Goose | Contract</h1>
 			<nav>
 				<a href="./">Home</a>
 				-
@@ -17,8 +17,9 @@
 			</nav>
 		</header>
 		<main>
-			<h2>Welcome to my ITIS3135 Homepage</h2>
-			<p>You've made it to the start of my work!</p>	
+			<h2>Contract</h2>
+			<p>
+            </p>	
 		</main>
 		<footer>
 			<nav>
