--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Collin Gallagher's Carefree Goose | Home | ITIS3135</h1>
+			<h1>Collin Gallagher's Carefree Goose | Introduction</h1>
 			<nav>
 				<a href="./">Home</a>
 				-
@@ -52,7 +52,7 @@
 				-
 				<a href="itis3135/">ITIS-3135</a>
 			</nav>
-			<p>Page built by <a href="">Care Free Goose Snacks</a>&copy; 2025</p>
+			<p>Page built by <a href="">Carefree Goose Snacks</a>&copy; 2025</p>
 		</footer>
 	</body>
 </html>
