--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -13,7 +13,7 @@
 				-
 				<a href="introduction.html">Introduction</a>
 				-
-				<a href="contract.html">Contract</a>"
+				<a href="contract.html">Contract</a>
 			</nav>
 		</header>
 		<main>
