--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -18,7 +18,7 @@
 		</header>
 		<main>
 			<h2>Welcome to my ITIS3135 Homepage</h2>
-			<p>You've made it to the start of my work itis3135 page!</p>	
+			<p>You've made it to the start of my ITIS-3135 page!</p>	
 		</main>
 		<footer>
 			<nav>
