--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -32,7 +32,7 @@
 				-
 				<a href="itis3135/">ITIS-3135</a>
 			</nav>
-			<p>Page built by <a href="">Care Free Goose Snacks</a> &copy; 2025</p>
+			<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
 		</footer>
 	</body>
 </html>
