--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -52,7 +52,7 @@
 				-
 				<a href="itis3135/">ITIS-3135</a>
 			</nav>
-			<p>Page built by <a href="">Carefree Goose Snacks</a>&copy; 2025</p>
+			<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
 		</footer>
 	</body>
 </html>
