--- a/itis3135/collincollective.com/index.html
+++ b/itis3135/collincollective.com/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <img src=”AdobeStock_46338788_Preview.ai” alt=”Collin Collective Logo”>
+        <img src="images/collincollectivelogo.png" alt="Collin Collective Logo">
         <h1>Collin Collective</h1>
     </header>
     <main>
