--- a/itis3135/collincollective.com/index.html
+++ b/itis3135/collincollective.com/index.html
@@ -51,11 +51,11 @@
 </head>
 <body>
     <header>
-        <img src="images/collincollectivelogo.png" alt="Collin Collective Logo">
+        <img src="collincollectivelogo.png" alt="Collin Collective Logo">
         <h1>Collin Collective</h1>
     </header>
     <main>
-        <h2>Collin Collective's Services</h2>
+        <h2>Collin's Collective Services</h2>
         <p>Collin Collective is dedicated to crafting smooth, accessible, and cleanly designed websites. We bring clarity to the digital world with a focus on user experience and aesthetic results.</p>
         <h3>Why Choose Us?</h3>
         <ul>
