settingg up company

--- a/itis3135/carefreegoose/about.html
+++ b/itis3135/carefreegoose/about.html
@@ -19,8 +19,9 @@
         </nav>
     </header>
     <main>
-        <h2>Welcome</h2>
-        <p>Take a look at all our products and read about us in our about page!</p>
+        <h2>Welcome to Carefree Goose Bath Co.</h2>
+        <p>At Carefree Goose Bath Co., we create whimsical and soothing bath products to help you unwind after a long day. From fizzy bath bombs to calming bath salts, our products bring relaxation and fun to your self-care routine.</p>
+        <p>We believe that everyone deserves a moment of peace and tranquility. Our handcrafted, high-quality bath essentials are made with love and designed to turn your bath time into a magical escape.</p>
     </main>
     <footer>
         <p><em>Relax, soak, and let the stress fly away</em></p>
@@ -28,3 +29,4 @@
     </footer>
 </body>
 </html>
+
