--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -33,6 +33,8 @@
 				<a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
 				-
 				<a href="itis3135/">ITIS-3135</a>
+				-
+				<a href="carefreegoose/index.html">Carefree Goose Bath Co.</a>
 			</nav>
 			<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
 		</footer>
