--- a/itis3135/carefreegoose/index.html
+++ b/itis3135/carefreegoose/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carefree Goose Bath Co.</title>
-    <link rel="stylesheet" href="styles/company.css">
+    <link rel="stylesheet" href="company.css">
 </head>
 <body>
     <header>
