--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -16,6 +16,8 @@
 				<a href="contract.html">Contract</a>
 				-
 				<a href="carefreegoose/index.html">Carefree Goose Bath Co.</a>
+				- 
+				<a href="hobby/index.html">Hobby Page</a>
 			</nav>
 		</header>
 		<main>
