Rework of hobby page and adding accumulus

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <title>Photography Passion</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
     <style>
@@ -70,36 +71,73 @@
     <main>
         <section id="home" class="active">
             <h2>What is Photography?</h2>
-            <p>Photography is the art of capturing light with a camera to create stunning images.</p>
+            <p>Photography is the art of capturing light with a camera to create stunning images. It is a form of visual storytelling that allows you to tell a story through the lens of a camera. It also allows you to be able to save memories to keep in theory forever. Pictures are an amazing gateway to creating and savoring memories that will last a lifetime, it also lets you use some of your creative side!</p>
             <figure>
-                <img src="images/camera.jpg" alt="Camera" width="100%">
-                <figcaption>A high-end DSLR camera</figcaption>
-                <i>AI Prompt: "A realistic DSLR camera on a wooden table, studio lighting"</i>
+                <img src="images/sunset-5344024_1280.jpg" alt="Camera" width="100%">
+                <figcaption>A high-end DSLR camera being used to capture a scene</figcaption>
+                <img src ="images/spireandbush.jpeg" alt = "spire and a magnolia bush" width="100%">
+                <figcaption>Interesting Shrine in Buddhist temple in Japan</figcaption>
             </figure>
         </section>
         <section id="about">
             <h2>About Me</h2>
-            <p>I'm a passionate photographer who loves capturing nature and landscapes.</p>
+            <p>I'm a passionate photographer who loves capturing nature and landscapes. I have been on many cross country trips and have been to 48 out of the 50 states. I have also made trips out of the country and seen many parts of Japan and South Korea. I have a love of nature and landscapes, and the vast differences locations hold with wildlife and scenery.</p>
             <figure>
-                <img src="images/me.jpg" alt="Photographer" width="100%">
-                <figcaption>Me on a photography trip</figcaption>
+                <img src="images/ziongorge.jpeg" alt="Zion gorge" width="100%">
+                <figcaption>My picture while hiking through Zion National Park</figcaption>
+            </figure>
+            <figure>
+                <img src="images/japantemple.jpeg" alt="Busan Temple" width="100%">
+                <figcaption>Buddhist temple in Busan, South Korea</figcaption>
             </figure>
         </section>
         <section id="when">
             <h2>Best Times for Photography</h2>
-            <p>The golden hour, occurring during sunrise and sunset, provides the best natural lighting.</p>
+            <p>The golden hour, occurring during sunrise and sunset, provides the best natural lighting. It also provides such an amazing backdrop for capturing captivating images. Sunsets are my personal favorite as they are like the segway from a day to a peaceful night with such a serene view and display of nature.</p>
+            <figure>
+                <img src="images/cruisesunset.jpeg" alt="Sunset over ocean" width="100%">
+                <figcaption>Sunset over the ocean</figcaption>
+            </figure>
+            <figure>
+                <img src="images/goldsunset.jpeg" alt="Sunset over the mountains" width="100%">
+                <figcaption>Sunset over the mountains</figcaption>
+            </figure>
         </section>
         <section id="where">
             <h2>Best Locations</h2>
-            <p>National parks and urban cityscapes provide amazing photography opportunities.</p>
+            <p>National parks and urban cityscapes provide amazing photography opportunities. As well as the mountains and places with variety in the scale of things, it provides a way to use things in composition. Also you can lead to having amazing experiences through the things you will see and experience in nature.</p>
+            <figure>
+                <img src="images/zionmounds.jpeg" alt="Zion National Park" width="100%">
+                <figcaption>Zion National Park</figcaption>
+            </figure>
+            <figure>
+                <img src="images/horshoe.jpeg" alt="Horshoe bend" width="100%">
+                <figcaption>Horshoe Bend National Park</figcaption>
+            </figure>
         </section>
         <section id="how">
             <h2>How to Start</h2>
-            <p>Start with a simple camera and learn composition techniques.</p>
+            <p>Start with a simple camera, or even just your phone. Then, explore different settings and learn composition techniques. The first big keys into photography is composition and to be able to understand light and how to use it to your advantage.</p>
+            <figure>
+                <img src="images/bigbudda.jpeg" alt="Big Budda Statue" width="100%">
+                <figcaption>Composition shot of a big buddha statue</figcaption>
+            </figure>
+            <figure>
+                <img src="images/japantree.jpeg" alt="Twisted tree" width="100%">
+                <figcaption>Composition shot of an amazing tree in Japan</figcaption>
+            </figure>
         </section>
         <section id="why">
             <h2>Why Photography?</h2>
-            <p>Photography helps capture memories and explore creativity.</p>
+            <p>Photography helps capture memories and explore creativity of the eye and mind. It helps us capture moments and memories so that they are not so easily forgotten. It's also a beautiful way to be able to share your trips and to be able to show people parts of the world they may not have seen.</p>
+            <figure>
+                <img src="images/zionvalley.jpeg" alt="Zion valley" width="100%">
+                <figcaption>Zion valley, Utah off of trail overviewing the entire valley</figcaption>
+            </figure>
+            <figure>
+                <img src="images/IMG_1200.jpeg" alt="Me with my dad" width="85%">
+                <figcaption>Me and my dad</figcaption>
+            </figure>
         </section>
         <section id="ai">
             <h2>AI Prompts</h2>
@@ -113,4 +151,7 @@
         }
     </script>
 </body>
+<footer>
+    <p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
+</footer>
 </html>
