--- a/itis3135/carefreegoose/about.html
+++ b/itis3135/carefreegoose/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <title>Carefree Goose Bath Co.</title>
     <link rel="stylesheet" href="company.css">
 </head>
