--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -8,18 +8,18 @@
     <link rel="icon" href="images/favicon.png" type="image/png">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
+            font-family: 'Verdana', sans-serif;
+            background-color: #2a2a40;
+            color: #e0e0e0;
             text-align: center;
         }
         header {
-            background: #333;
-            color: white;
-            padding: 10px;
+            background: #1a1a2e;
+            color: #f5a623;
+            padding: 15px;
         }
         nav a {
-            color: white;
+            color: #f5a623;
             text-decoration: none;
             margin: 10px;
             font-size: 18px;
@@ -29,12 +29,12 @@
             text-decoration: underline;
         }
         main {
-            max-width: 800px;
+            max-width: 900px;
             margin: 20px auto;
             padding: 20px;
-            background: white;
+            background: #222;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(255, 165, 0, 0.3);
         }
         section {
             display: none;
@@ -44,14 +44,18 @@
         }
         figure {
             margin: 20px 0;
+            text-align: center;
+        }
+        figure img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(255, 165, 0, 0.3);
         }
         figcaption {
             font-weight: bold;
-        }
-        i {
-            display: block;
-            font-size: 0.9em;
-            color: #666;
+            margin-top: 10px;
+            color: #f5a623;
         }
     </style>
 </head>
@@ -75,6 +79,8 @@
             <figure>
                 <img src="images/sunset-5344024_1280.jpg" alt="Camera" width="100%">
                 <figcaption>A high-end DSLR camera being used to capture a scene</figcaption>
+            </figure>
+            <figure>
                 <img src ="images/spireandbush.jpeg" alt = "spire and a magnolia bush" width="100%">
                 <figcaption>Interesting Shrine in Buddhist temple in Japan</figcaption>
             </figure>
@@ -146,7 +152,7 @@
     </main>
     <script>
         function showSection(id) {
-            document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
+            document.querySelectorAll('section').forEach(sec => (sec.classList.remove('active')));
             document.getElementById(id).classList.add('active');
         }
     </script>
