--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -77,11 +77,11 @@
             <h2>What is Photography?</h2>
             <p>Photography is the art of capturing light with a camera to create stunning images. It is a form of visual storytelling that allows you to tell a story through the lens of a camera. It also allows you to be able to save memories to keep in theory forever. Pictures are an amazing gateway to creating and savoring memories that will last a lifetime, it also lets you use some of your creative side!</p>
             <figure>
-                <img src="images/sunset-5344024_1280.jpg" alt="Camera" width="100%">
+                <img src="images/sunset-5344024_1280.jpg" alt="Camera" width="500">
                 <figcaption>A high-end DSLR camera being used to capture a scene</figcaption>
             </figure>
             <figure>
-                <img src ="images/spireandbush.jpeg" alt = "spire and a magnolia bush" width="100%">
+                <img src ="images/spireandbush.jpeg" alt = "spire and a magnolia bush" width="500">
                 <figcaption>Interesting Shrine in Buddhist temple in Japan</figcaption>
             </figure>
         </section>
@@ -89,11 +89,11 @@
             <h2>About Me</h2>
             <p>I'm a passionate photographer who loves capturing nature and landscapes. I have been on many cross country trips and have been to 48 out of the 50 states. I have also made trips out of the country and seen many parts of Japan and South Korea. I have a love of nature and landscapes, and the vast differences locations hold with wildlife and scenery.</p>
             <figure>
-                <img src="images/ziongorge.jpeg" alt="Zion gorge" width="100%">
+                <img src="images/ziongorge.jpeg" alt="Zion gorge" width="500">
                 <figcaption>My picture while hiking through Zion National Park</figcaption>
             </figure>
             <figure>
-                <img src="images/japantemple.jpeg" alt="Busan Temple" width="100%">
+                <img src="images/japantemple.jpeg" alt="Busan Temple" width="500">
                 <figcaption>Buddhist temple in Busan, South Korea</figcaption>
             </figure>
         </section>
@@ -101,11 +101,11 @@
             <h2>Best Times for Photography</h2>
             <p>The golden hour, occurring during sunrise and sunset, provides the best natural lighting. It also provides such an amazing backdrop for capturing captivating images. Sunsets are my personal favorite as they are like the segway from a day to a peaceful night with such a serene view and display of nature.</p>
             <figure>
-                <img src="images/cruisesunset.jpeg" alt="Sunset over ocean" width="100%">
+                <img src="images/cruisesunset.jpeg" alt="Sunset over ocean" width="500">
                 <figcaption>Sunset over the ocean</figcaption>
             </figure>
             <figure>
-                <img src="images/goldsunset.jpeg" alt="Sunset over the mountains" width="100%">
+                <img src="images/goldsunset.jpeg" alt="Sunset over the mountains" width="500">
                 <figcaption>Sunset over the mountains</figcaption>
             </figure>
         </section>
@@ -113,11 +113,11 @@
             <h2>Best Locations</h2>
             <p>National parks and urban cityscapes provide amazing photography opportunities. As well as the mountains and places with variety in the scale of things, it provides a way to use things in composition. Also you can lead to having amazing experiences through the things you will see and experience in nature.</p>
             <figure>
-                <img src="images/zionmounds.jpeg" alt="Zion National Park" width="100%">
+                <img src="images/zionmounds.jpeg" alt="Zion National Park" width="500">
                 <figcaption>Zion National Park</figcaption>
             </figure>
             <figure>
-                <img src="images/horshoe.jpeg" alt="Horshoe bend" width="100%">
+                <img src="images/horshoe.jpeg" alt="Horshoe bend" width="500">
                 <figcaption>Horshoe Bend National Park</figcaption>
             </figure>
         </section>
@@ -125,11 +125,11 @@
             <h2>How to Start</h2>
             <p>Start with a simple camera, or even just your phone. Then, explore different settings and learn composition techniques. The first big keys into photography is composition and to be able to understand light and how to use it to your advantage.</p>
             <figure>
-                <img src="images/bigbudda.jpeg" alt="Big Budda Statue" width="100%">
+                <img src="images/bigbudda.jpeg" alt="Big Budda Statue" width="500">
                 <figcaption>Composition shot of a big buddha statue</figcaption>
             </figure>
             <figure>
-                <img src="images/japantree.jpeg" alt="Twisted tree" width="100%">
+                <img src="images/japantree.jpeg" alt="Twisted tree" width="500">
                 <figcaption>Composition shot of an amazing tree in Japan</figcaption>
             </figure>
         </section>
@@ -137,11 +137,11 @@
             <h2>Why Photography?</h2>
             <p>Photography helps capture memories and explore creativity of the eye and mind. It helps us capture moments and memories so that they are not so easily forgotten. It's also a beautiful way to be able to share your trips and to be able to show people parts of the world they may not have seen.</p>
             <figure>
-                <img src="images/zionvalley.jpeg" alt="Zion valley" width="100%">
+                <img src="images/zionvalley.jpeg" alt="Zion valley" width="500">
                 <figcaption>Zion valley, Utah off of trail overviewing the entire valley</figcaption>
             </figure>
             <figure>
-                <img src="images/IMG_1200.jpeg" alt="Me with my dad" width="85%">
+                <img src="images/IMG_1200.jpeg" alt="Me with my dad" width="500">
                 <figcaption>Me and my dad</figcaption>
             </figure>
         </section>
@@ -156,8 +156,8 @@
             document.getElementById(id).classList.add('active');
         }
     </script>
+    <footer>
+        <p>Page built by <a href="/itis3135/collincollective.com/index.html">Collin Collective</a>&copy; 2025</p>
+    </footer>
 </body>
-<footer>
-    <p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
-</footer>
 </html>
