--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -152,7 +152,7 @@
     </main>
     <script>
         function showSection(id) {
-            document.querySelectorAll('section').forEach(sec => (sec.classList.remove('active')));
+            document.querySelectorAll('section').forEach((sec) => { sec.classList.remove('active'); });
             document.getElementById(id).classList.add('active');
         }
     </script>
