--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -39,7 +39,7 @@
         section {
             display: none;
         }
-        section.active {
+        .active {
             display: block;
         }
         figure {
@@ -47,7 +47,9 @@
             text-align: center;
         }
         figure img {
-            max-width: 100%;
+            display: block;
+            margin: 0 auto;
+            max-width: 90%;
             height: auto;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(255, 165, 0, 0.3);
