--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -153,8 +153,10 @@
         </section>
     </main>
     <script>
-        function showSection(id) {
-            document.querySelectorAll('section').forEach((sec) => { sec.classList.remove('active'); });
+       function showSection(id) {
+            document.querySelectorAll('section').forEach((sec) => {
+                sec.classList.remove('active');
+            });
             document.getElementById(id).classList.add('active');
         }
     </script>
