--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -149,7 +149,15 @@
         </section>
         <section id="ai">
             <h2>AI Prompts</h2>
-            <p>AI-generated text and images were used for content and inspiration.</p>
+            <p>AI-generated references for the javascript prompts, and help with image sizing was used.</p>
+            <p>Prompt Given: To maintain proper image sizing what width should I make my images in pixels?</p>
+            <p>Answer: For Main Images Or starting ones: 1000px For captioned images: 700px For smaller images: 500px</p>
+            <p>Prompt Given: How should I go about trying to make a javascript solution for hiding the rest of the sections besides the one currently being viewed?</p>
+            <p>Answer:</p>
+            <figure>
+                <img src="images/Screenshot 2025-03-17 184745.png" alt="AI reference" width="500">
+                <figcaption>AI Generated reference</figcaption>
+            </figure>
         </section>
     </main>
     <script>
