--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -155,7 +155,7 @@
             <p>Prompt Given: How should I go about trying to make a javascript solution for hiding the rest of the sections besides the one currently being viewed?</p>
             <p>Answer:</p>
             <figure>
-                <img src="images/Screenshot 2025-03-17 184745.png" alt="AI reference" width="500">
+                <img src="images/screenshotai.png" alt="AI reference" width="500">
                 <figcaption>AI Generated reference</figcaption>
             </figure>
         </section>
