--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -50,6 +50,7 @@
             display: block;
             margin: 0 auto;
             max-width: 90%;
+            max-height: 100vh;
             height: auto;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(255, 165, 0, 0.3);
