--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -151,10 +151,10 @@
         <section id="ai">
             <h2>AI Prompts</h2>
             <p>AI-generated references for the javascript prompts, and help with image sizing was used.</p>
-            <p>Prompt Given: To maintain proper image sizing what width should I make my images in pixels?</p>
-            <p>Answer: For Main Images Or starting ones: 1000px For captioned images: 700px For smaller images: 500px</p>
-            <p>Prompt Given: How should I go about trying to make a javascript solution for hiding the rest of the sections besides the one currently being viewed?</p>
-            <p>Answer:</p>
+            <p><strong>Prompt Given:</strong> To maintain proper image sizing what width should I make my images in pixels?</p>
+            <p><strong>Answer:</strong> For Main Images Or starting ones: 1000px For captioned images: 700px For smaller images: 500px</p>
+            <p><strong>Prompt Given:</strong> How should I go about trying to make a javascript solution for hiding the rest of the sections besides the one currently being viewed?</p>
+            <p><strong>Answer:</strong></p>
             <figure>
                 <img src="images/screenshotai.png" alt="AI reference" width="500">
                 <figcaption>AI Generated reference</figcaption>
