--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -50,7 +50,7 @@
             display: block;
             margin: 0 auto;
             max-width: 90%;
-            max-height: 100vh;
+            max-height: 90vh;
             height: auto;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(255, 165, 0, 0.3);
@@ -102,7 +102,7 @@
         </section>
         <section id="when">
             <h2>Best Times for Photography</h2>
-            <p>The golden hour, occurring during sunrise and sunset, provides the best natural lighting. It also provides such an amazing backdrop for capturing captivating images. Sunsets are my personal favorite as they are like the segway from a day to a peaceful night with such a serene view and display of nature.</p>
+            <p>The golden hour, occurring during sunrise and sunset, provides the best natural lighting. It also provides such an amazing backdrop for capturing captivating images. Sunsets are my personal favorite as they are like the segway from a day to a peaceful night with such a serene view and display of nature. They also can create some of the prettiest effects on the clouds, and it can make for some really amazing views and shots.</p>
             <figure>
                 <img src="images/cruisesunset.jpg" alt="Sunset over ocean" width="700">
                 <figcaption>Sunset over the ocean</figcaption>
@@ -114,7 +114,7 @@
         </section>
         <section id="where">
             <h2>Best Locations</h2>
-            <p>National parks and urban cityscapes provide amazing photography opportunities. As well as the mountains and places with variety in the scale of things, it provides a way to use things in composition. Also you can lead to having amazing experiences through the things you will see and experience in nature.</p>
+            <p>National parks and urban cityscapes provide amazing photography opportunities. As well as the mountains and places with variety in the scale of things, it provides a way to use things in composition. Also it can lead you too having amazing experiences through the things you will see and experience in nature. Here are some cool shots from National Parks I have visited.</p>
             <figure>
                 <img src="images/zionmounds.jpg" alt="Zion National Park" width="700">
                 <figcaption>Zion National Park</figcaption>
@@ -126,7 +126,7 @@
         </section>
         <section id="how">
             <h2>How to Start</h2>
-            <p>Start with a simple camera, or even just your phone. Then, explore different settings and learn composition techniques. The first big keys into photography is composition and to be able to understand light and how to use it to your advantage.</p>
+            <p>Start with a simple camera, or even just your phone. Then, explore different settings and learn how to compose your shots to frame what youre trying to capture best. The first big keys into photography is composition and to be able to understand light and how to use it to your advantage. It's also all about what you personally see and what you think would make a cool shot, not everyone will agree, but someone will!</p>
             <figure>
                 <img src="images/bigbudda.jpg" alt="Big Budda Statue" width="700">
                 <figcaption>Composition shot of a big buddha statue</figcaption>
@@ -138,7 +138,7 @@
         </section>
         <section id="why">
             <h2>Why Photography?</h2>
-            <p>Photography helps capture memories and explore creativity of the eye and mind. It helps us capture moments and memories so that they are not so easily forgotten. It's also a beautiful way to be able to share your trips and to be able to show people parts of the world they may not have seen.</p>
+            <p>Photography helps capture memories and explore creativity of the eye and mind. It helps us capture moments and memories so that they are not so easily forgotten. It's also a beautiful way to be able to share your trips and to be able to show people parts of the world they may not have seen. I personally love pictures for how they allow me to capture a moment in time and be able to take it all in again later down the line.</p>
             <figure>
                 <img src="images/zionvalley.jpg" alt="Zion valley" width="700">
                 <figcaption>Zion valley, Utah off of trail overviewing the entire valley</figcaption>
