--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -84,7 +84,7 @@
                 <figcaption>A high-end DSLR camera being used to capture a scene</figcaption>
             </figure>
             <figure>
-                <img src ="images/spireandbush.jpg" alt = "spire and a magnolia bush" width="500">
+                <img src ="images/spireandbush1.jpg" alt = "spire and a magnolia bush" width="600">
                 <figcaption>Interesting Shrine in Buddhist temple in Japan</figcaption>
             </figure>
         </section>
