--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -15,9 +15,9 @@
 				-
 				<a href="contract.html">Contract</a>
 				-
-				<a href="carefreegoose/index.html">Carefree Goose Bath Co.</a>
+				<a href="carefreegoose/">Carefree Goose Bath Co.</a>
 				- 
-				<a href="hobby/index.html">Hobby Page</a>
+				<a href="hobby/">Hobby Page</a>
 			</nav>
 		</header>
 		<main>
