--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -17,7 +17,13 @@
 				-
 				<a href="carefreegoose/">Carefree Goose Bath Co.</a>
 				- 
+			</nav>
+			<nav class="second-nav">
 				<a href="hobby/">Hobby Page</a>
+				~
+				<a href="carefreegoose/">Carefree Goose Bath Co.</a>
+				~
+				<a href="">Crappy Webpage</a>
 			</nav>
 		</header>
 		<main>
