--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<header>
 			<h1>Collin Gallagher's Carefree Goose | ITIS3135</h1>
-			<nav>
+			<nav class="top-nav">
 				<a href="./">Home</a>
 				-
 				<a href="introduction.html">Introduction</a>
