--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -16,6 +16,8 @@
 				<a href="contract.html">Contract</a>
 				-
 				<a href="carefreegoose/">Carefree Goose Bath Co.</a>
+				-
+				<a href="byo_intro.html">Byo Intro</a>
 			</nav>
 			<nav class="second-nav">
 				<a href="hobby/">Hobby Page</a>
