--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/default.css">
-    <title>Introduction Form</title>
+    <title>Collin Gallagher's Carefree Goose | ITIS3135 | Home</title>
     <style>
         body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; }
         label { font-weight: bold; display: block; margin-top: 10px; }
@@ -13,6 +13,17 @@
     </style>
 </head>
 <body>
+    <nav class="top-nav">
+        <a href="./">Home</a>
+        -
+        <a href="introduction.html">Introduction</a>
+        -
+        <a href="contract.html">Contract</a>
+        -
+        <a href="carefreegoose/">Carefree Goose Bath Co.</a>
+        -
+        <a href="byo_intro.html">Byo Intro</a>
+    </nav>
     <h2>Personal Introduction Form</h2>
     <form id="introForm">
         <label for="name">Name:</label>
