--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -68,6 +68,20 @@
         <button type="submit">Submit</button>
         <button type="reset">Reset</button>
     </form>
+    <footer>
+        <nav>
+            <a href="https://webpages.charlotte.edu/cgalla17/">Charlotte.edu</a>
+            -
+            <a href="https://github.com/cjgalla">GitHub</a>
+            -
+            <a href="https://cjgalla.github.io/">GitHub.io</a>
+            -
+            <a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
+            -
+            <a href="itis3135/">ITIS-3135</a>
+        </nav>
+        <p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
+    </footer>
     
     <script>
         function addCourse() {
