--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/default.css">
-    <title>Collin Gallagher's Carefree Goose | ITIS3135 | Home</title>
+    <title>BYO Introduction</title>
     <style>
         body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; }
         label { font-weight: bold; display: block; margin-top: 10px; }
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+    <h1>Collin Gallagher's Carefree Goose | ITIS3135</h1>
     <nav class="top-nav">
         <a href="./">Home</a>
         -
