--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -7,14 +7,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Collin Gallagher's Carefree Goose | Contract</h1>
-			<nav>
-				<a href="./">Home</a>
-				-
-				<a href="introduction.html">Introduction</a>
-				-
-				<a href="contract.html">Contract</a>
-			</nav>
+			<div data-include="compenents/header.html">
 		</header>
 		<main>
 			<h2>Contract</h2>
@@ -23,20 +16,8 @@
             </p>	
 		</main>
 		<footer>
-			<nav>
-				<a href="https://webpages.charlotte.edu/cgalla17/">Charlotte.edu</a>
-				-
-				<a href="https://github.com/cjgalla">GitHub</a>
-				-
-				<a href="https://cjgalla.github.io/">GitHub.io</a>
-				-
-				<a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
-				-
-				<a href="itis3135/">ITIS-3135</a>
-				-
-				<a href="carefreegoose/index.html">Carefree Goose Bath Co.</a>
-			</nav>
-			<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
+			<div data-include="compenents/footer.html">
 		</footer>
+		<script src="scripts/HTMLInclude.js"></script>
 	</body>
 </html>
