--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,43 +7,15 @@
 	</head>
 	<body>
 		<header>
-			<h1>Collin Gallagher's Carefree Goose | ITIS3135</h1>
-			<nav class="top-nav">
-				<a href="./">Home</a>
-				-
-				<a href="introduction.html">Introduction</a>
-				-
-				<a href="contract.html">Contract</a>
-				-
-				<a href="carefreegoose/">Carefree Goose Bath Co.</a>
-				-
-				<a href="byo_intro.html">Byo Intro</a>
-			</nav>
-			<nav class="second-nav">
-				<a href="hobby/">Hobby Page</a>
-				~
-				<a href="carefreegoose/">Carefree Goose Bath Co.</a>
-				~
-				<a href="">Crappy Webpage</a>
-			</nav>
+			<div data-include="compenents/header.html">
 		</header>
 		<main>
 			<h2>Welcome to my ITIS3135 Homepage</h2>
 			<p>You've made it to the start of my ITIS-3135 page!</p>	
 		</main>
 		<footer>
-			<nav>
-				<a href="https://webpages.charlotte.edu/cgalla17/">Charlotte.edu</a>
-				-
-				<a href="https://github.com/cjgalla">GitHub</a>
-				-
-				<a href="https://cjgalla.github.io/">GitHub.io</a>
-				-
-				<a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
-				-
-				<a href="itis3135/">ITIS-3135</a>
-			</nav>
-			<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
+			<div data-include="compenents/footer.html">
 		</footer>
+		<script src="scripts/HTMLInclude.js"></script>
 	</body>
 </html>
