--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<h2>Home Page</h2>
 		<p>Take a look at all my cool links!</p>
 		<footer>
-			<div data-include="compenents/footer.html">
+			<div data-include="components/footer.html">
 		</footer>
+		<script src="scripts/HTMLInclude.js"></script>
 	</body>
 </html>
