--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -33,17 +33,9 @@
 </head>
 <body>
     <h1>Collin Gallagher's Carefree Goose | ITIS3135</h1>
-    <nav class="top-nav">
-        <a href="./">Home</a>
-        -
-        <a href="introduction.html">Introduction</a>
-        -
-        <a href="contract.html">Contract</a>
-        -
-        <a href="carefreegoose/">Carefree Goose Bath Co.</a>
-        -
-        <a href="byo_intro.html">Byo Intro</a>
-    </nav>
+    <header>
+        <div data-include="components/header.html"></div>
+    </header>>
     <h2>Personal Introduction Form</h2>
     <form id="introForm">
         <p class="form-row">
@@ -96,7 +88,7 @@
         <button type="reset">Reset</button>
     </form>
     <footer>
-        <div data-include="compenents/footer.html">
+        <div data-include="components/footer.html">
     </footer>
     <script src="scripts/HTMLInclude.js"></script>
     
