--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h2>Home Page</h2>
 		<p>Take a look at all my cool links!</p>
 		<footer>
-			<div data-include="itis3135/components/footer.html">
+			<div data-include="itis3135/components/footer.html"></div>
 		</footer>
 		<script src="scripts/HTMLInclude.js"></script>
 	</body>
