--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -88,7 +88,7 @@
         <button type="reset">Reset</button>
     </form>
     <footer>
-        <div data-include="components/footer.html">
+        <div data-include="components/footer.html"></div>
     </footer>
     <script src="scripts/HTMLInclude.js"></script>
     
