--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,14 +7,14 @@
 	</head>
 	<body>
 		<header>
-			<div data-include="components/header.html">
+			<div data-include="components/header.html"></div>
 		</header>
 		<main>
 			<h2>Welcome to my ITIS3135 Homepage</h2>
 			<p>You've made it to the start of my ITIS-3135 page!</p>	
 		</main>
 		<footer>
-			<div data-include="components/footer.html">
+			<div data-include="components/footer.html"></div>
 		</footer>
 		<script src="scripts/HTMLInclude.js"></script>
 	</body>
