--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-			<div data-include="components/header.html">
+			<div data-include="components/header.html"></div>
 		</header>
 		<main>
 			<h2>Introduction</h2>
@@ -33,7 +33,7 @@
             </ul>
 		</main>
 		<footer>
-			<div data-include="components/footer.html">
+			<div data-include="components/footer.html"></div>
 		</footer>
 		<script src="scripts/HTMLInclude.js"></script>
 	</body>
