--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
 		<h2>Home Page</h2>
 		<p>Take a look at all my cool links!</p>
 		<footer>
-			<div data-include="itis3135/components/footer.html"></div>
+			<nav>
+				<a href="https://webpages.charlotte.edu/cgalla17/">Charlotte.edu</a>
+				-
+				<a href="https://github.com/cjgalla">GitHub</a>
+				-
+				<a href="https://cjgalla.github.io/">GitHub.io</a>
+				-
+				<a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
+				-
+				<a href="itis3135/">ITIS-3135</a>
+			</nav>
+			<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
+			<script>
+				document.getElementById("validation_link_html").setAttribute("href","https.//validator.w3.org/check?uri=" + location.href);
+				document.getElementById("validation_link_css").setAttribute("href","https.//jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+			</script>
 		</footer>
-		<script src="scripts/HTMLInclude.js"></script>
+		
 	</body>
 </html>
