--- a/itis3135/stuff/Mypage& Survey.htm
+++ b/itis3135/stuff/Mypage& Survey.htm
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-        <a href="./">Back to Homepage</a>
+        <a href="/index.html">Back to Homepage</a>
         <a href="Mypage& Survey.htm">CRAPPY WEBPAGE</a>
     </header>
     
