--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div data-include="components/header.html"></div>
+        <div data-include="components/header.html" data-lazy="0"></div>
     </header>
     <main>
         <h2>Website Evaluations</h2>
@@ -36,7 +36,7 @@
         </section>
     </main>
     <footer>
-        <div data-include="components/footer.html"></div>
+        <div data-include="components/footer.html" data-lazy="0"></div>
     </footer>
     <script src="scripts/HTMLinclude.js"></script>
 </body>
