--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -104,59 +104,59 @@
                     <tbody>
                     <tr>
                         <td rowspan="2" headers="category">Leadership</td>
-                        <td id="category name">Spongebob Squarepants</td>
+                        <td headers="category name">Spongebob Squarepants</td>
                         <td headers="category email">sponge@bikinibiz.com</td>
                         <td headers="category years">8</td>
                         <td headers="category salary">$5000</td>
                     </tr>
                     <tr>
-                        <td id="category name">Lisa Simpson</td>
+                        <td headers="category name">Lisa Simpson</td>
                         <td headers="catagory email">lsimpson@yahoo.com</td>
                         <td headers="category years">4</td>
                         <td headers="category salary">$4500</td>
                     </tr>
                     <tr>
                         <td rowspan="3" headers="category">Operations</td>
-                        <td id="category name">Michael Gallagher</td>
+                        <td headers="category name">Michael Gallagher</td>
                         <td headers="category email">michaeljosephgallagher@hotmail.com</td>
                         <td headers="category years">15</td>
                         <td headers="category salary">$4000</td>
                     </tr>
                     <tr>
-                        <td id="category name">Morty Smith</td>
+                        <td headers="category name">Morty Smith</td>
                         <td headers="category email">morty.mort@multiverse.org</td>
                         <td headers="category years">2</td>
                         <td headers="category salary">$3000</td>
                     </tr>
                     <tr>
-                        <td id="category name">Mario Hawkins</td>
+                        <td headers="category name">Mario Hawkins</td>
                         <td headers="category email">mhawki41@charlotte.edu</td>
                         <td headers="category years">9</td>
                         <td headers="category salary">$4100</td>
                     </tr>
                     <tr>
                         <td rowspan="3" headers="category">Creative</td>
-                        <td id="category name">Scooby Doo</td>
+                        <td headers="category name">Scooby Doo</td>
                         <td headers="category email">scoobyroo@mysteryINC.com</td>
                         <td headers="category years">12</td>
                         <td headers="category salary">$4700</td>
                     </tr>
                     <tr>
-                        <td id="category name">Aang Airbender</td>
+                        <td headers="category name">Aang Airbender</td>
                         <td headers="category email">avatar@benders.com</td>
                         <td headers="category years">20</td>
                         <td headers="category salary">$5100</td>
                     </tr>
                     <tr>
-                        <td id="category name">Elsa Arendelle</td>
+                        <td headers="category name">Elsa Arendelle</td>
                         <td headers="category email">queenice@gmail.com</td>
                         <td headers="category years">6</td>
                         <td headers="category salary">$4900</td>
                     </tr>
                      <tr>
-                        <th colspan="3">Total Years of Service</th>
-                        <td>76</td>
-                        <td>$35,300</td>
+                        <th id="total" colspan="3">Total Years of Service</th>
+                        <td headers="total years">76</td>
+                        <td headers="total salary">$35,300</td>
                     </tr>
                     </tbody>
                 </table>
