--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -94,11 +94,11 @@
                 <table>
                     <thead>
                     <tr>
-                        <th id="category" scop="col">Department</th>
-                        <th id="name" scop="col">Name</th>
-                        <th id="email" scop="col">Email</th>
-                        <th id="years" scop="col">Years</th>
-                        <th id="salary" scop="col">Monthly Salary</th>
+                        <th id="category" scope="col">Department</th>
+                        <th id="name" scope="col">Name</th>
+                        <th id="email" scope="col">Email</th>
+                        <th id="years" scope="col">Years</th>
+                        <th id="salary" scope="col">Monthly Salary</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -111,7 +111,7 @@
                     </tr>
                     <tr>
                         <td headers="category name">Lisa Simpson</td>
-                        <td headers="catagory email">lsimpson@yahoo.com</td>
+                        <td headers="category email">lsimpson@yahoo.com</td>
                         <td headers="category years">4</td>
                         <td headers="category salary">$4500</td>
                     </tr>
