--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -39,11 +39,14 @@
         figure tbody tr:nth-child(even) {
             background-color: rgb(194, 194, 194);
         }
-        tr:nth-of-type(odd) td[rowspan] {
+        td[rowspan] {
             background-color: rgb(110, 110, 110);
             color: rgb(245, 245, 245);
         }
-
+        tr th[colspan] {
+            background-color: rgb(110, 110, 110);
+            color: rgb(245, 245, 245);
+        }
         figure tfoot {
             background-color: rgb(110, 110, 110);
             color: rgb(245, 245, 245);
